@@ -3,6 +3,8 @@
 #
 
 
+2017-09-08 -> fix joystick initialisation
+
 2017-09-07 -> set correct size of screen and image for input_control example
 	      (the first example which should run on the tv)
 	   -> add first input parts for the joystick
